manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "echoserver"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "echoserver"
  template:
    metadata:
      labels:
        app: "echoserver"
    spec:
      containers:
        - name: "echoserver"
          image: "ealen/echo-server:latest"
          ports:
          - containerPort: 80
