manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: "echoserver"
    labels:
        app: "echoserver"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: default-echoserver.14efaeab5490490da430.eastasia.aksapp.io
          http:
            paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                    name: "echoserver"
                    port: 
                        number: 80
